- Allow "checkin" for ghosts (#7152).
- Preview URLs are now determined using an adapter (#7030).
- Added a Nagios checkable view for the length of the publish task queue
  (#6801).
- Update relation index not only on checkin but also on add (#6415).
- Enable flashmessages to be updated via javascript (#6415).
- checkout.helper supports ignoring conflicts now (#7587).


1.44.0 (2010-06-09)
-------------------

- Live-Propertys nur setzen, wenn sich der Wert geändert hat (#7392).
- CAP-Kontext wieder entfernt (#7365).
- Bilddatei ist beim Anlegen jetzt obligatorisch, beim Editieren nicht (#7253).
- Obskurer Clipboard/Ghost-Fehler behoben (#6631).
- Neues Tab 'References', in dem die Objekte aufgelistet werden, von denen ein
  Objekt referenziert wird (#6160).
- Fehler beim Feed-Update mit FakeEntry behoben (#7391).
- Sortieren einer Bildergruppe nach Dateiname repariert (#7087).
- Autoren sind nicht mehr Freitext, sondern CMS-Objekte (#7333).
- SingleResource erlaubt Löschen (#5010).


1.43.0 (2010-06-02)
-------------------

- Retrieving None from XML now yields None, not the unicode string u'None'
  (#7360).

- Copyrights-field from CommonMetadata is now optional

- Copyrights moved to "navigation" in metadata form.

- ``product_id`` moved to "head" in metadata form.


1.42.0 (2010-05-17)
-------------------

- DAV-Properties from the "INTERNAL" namespace are no longer copied to XML
  (#7151).

- Last-Semantic-Change is now determined by the last save of the workingcopy.
  Before it was determined by the time of the checkin which lead to superfluous
  conflict errors (#7151).

- Generalised the way to control which dav properties are copied to XML
  (#7213).


1.41.4 (2010-04-14)
-------------------

- Provide useful error message in the ``redirect_to`` view when the object
  doesn't exist (#6998).

- When trying to view the thumbnail of an empty image group a 404 is returned
  instead of 500 (#6998).

1.41.3 (2010-04-14)
-------------------
