@@ -15,6 +15,8 @@ zeit.cms changes
 - Update relation index not only on checkin but also on add (#6415).
 - Enable flashmessages to be updated via javascript (#6415).
 - checkout.helper supports ignoring conflicts now (#7587).
+- Avoid race-condition during publish: don't check if we can checkout/checkin,
+  but try to checkout/checkin and catch errors. (#7586).
 
 
 1.44.0 (2010-06-09)
